Newsreader newview add and horizontal

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NewsReader">
         <activity
+            android:name=".FullNewsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".fullViewNews"
+            android:exported="false" />
+        <activity
             android:name=".Regiter"
             android:exported="false" />
         <activity
